# datameta/api/__init__.py
@@ -25,6 +25,8 @@ from pyramid.config import Configurator
 def includeme(config: Configurator) -> None:
     """Pyramid knob."""
     config.add_route("apikeys", "/api/keys")
+    config.add_route("apikeys_id", "/api/keys/{label}")
+    config.add_route("user_id_keys", "/api/users/{id}/keys")
     config.add_route("SetUserPassword", "/api/users/{id}/password")
     config.add_route("users", "/api/users")
     config.add_route("metadatasets", "/api/metadatasets")
