# datameta/api/openapi.yaml
@@ -37,6 +37,7 @@ paths:
       description: Create new API Key/Token
       tags:
         - Authentication
+        - Users
       operationId: CreateApiKey
       requestBody:
         content:
@@ -66,6 +67,34 @@ paths:
         - cookieAuth: []
         - {}
 
+  /keys/{label}:
+    delete:
+      summary: Delete ApiKey by label
+      description: >-
+        Delete ApiKey by label.
+      tags:
+        - Authentication
+        - Users
+      operationId: DeleteApiKey
+      parameters:
+        - name: label
+          in: path
+          description: Label of Apikey
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '400':
+          $ref: '#/components/responses/ValidationError'
+        '500':
+          $ref: '#/components/responses/ValidationError'
+          
   /users:
     post:
       summary: Register a New User
@@ -103,6 +132,41 @@ paths:
         '500':
           $ref: '#/components/responses/ValidationError'
   
+  /users/{id}/keys:
+    get:
+      summary: All API keys for a user
+      description: >-
+        Get a list of all API keys for a user.
+        Please note that you cannot retrieve
+        the tokens themselves because they are
+        stored in a hashed format in our database
+        as only the respective user is allowed
+        to know them.
+      tags:
+        - Authentication
+        - User
+      operationId: GetUserApiKeys
+      parameters:
+        - name: id
+          in: path
+          description: ID of the User
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ApiKeyList"
+        "401":
+          description: Unauthorized
+        '400':
+          $ref: '#/components/responses/ValidationError'
+        '500':
+          $ref: '#/components/responses/ValidationError'
+
   /users/{id}/password:
     put:
       summary: Update a user's password
@@ -457,6 +521,21 @@ components:
         - userId
         - token
         - expiresAt
+      additionalProperties: false
+
+    ApiKeyList:
+      type: array
+      items:
+        type: object
+        properties:
+          label:
+            type: string
+          expiresAt:
+            type: string
+            nullable: True
+        required:
+          - label
+          - expiresAt
       additionalProperties: false
 
     PasswordChange:
